08.jan (lv)
      - fix #8499: musicxml import/export: print-object="no" fixes
      - fix #8475: musicxml import: Audiveris ".0" not handled in alter and in backup and forward duration
      - fix #8429: musicxml import: voices mixed up
       (mi)
      - Cosmetic changes to Staff Type Properties Dlg Box
      - In non-stemless tablature staves, stems, hooks and beams moved to a running
        strip above the staff.
07.jan (ws)
      - fix repeats
      - new command line option to override config path (#6599)
      - implement dynamics for linked parts
      - new symbols for grace note palett
      - fix grace note entry
06.jan (ws)
      - add SlurSegment into "inspector"
      - more slur optimizations
       (la)
      - enable time signature deletion in timesig palette
05.jan (ws)
      - "reset to default" resets stem direction of chords to "auto"
      - tuning slur layout (test file slur1.mscx, slur2.mcx)
        (TODO: tuning of grace note slurs)
      - "reset to default" now also works in edit mode
04.jan (ws)
      - fix #8450: problem while playing imported guitar pro file
      - fixes for synthesizer parameter load/restore
02.jan (mi)
      - tablature duration symbols were incorrectly placed above topmost staff rather than
        above tablature staff: corrected
      - Note::_fretConflict was not properly initialized: corrected.
01.jan (2011!) (mi)
      - Measure::updateAccidentals for TAB staves uses whole chord context to avoid (or reduce)
        fretting conflicts (multiple notes of a chord on teh same string)
      - Added visible marks (red background) for notes with fretting conflicts
31.dec (ws)
      - better capella import: detect upbeat
      - save omr images along with score in mscz container
30.dec (lv)
      - add MusicXML regression testfile testVoiceMapper1.xml for #8385
29.dec (ws)
      - make default style configurable in preferences
25.dec (mi)
      - 2 tablature fonts updated
23.dec (ws)