@@ -1,3 +1,6 @@
+11.jan (ws)
+      - fix repeat regression (testfiles test/repeat*.mscz)
+      - applied patch from fnbecker (#8404); needs more testing
 08.jan (lv)
       - fix #8499: musicxml import/export: print-object="no" fixes
       - fix #8475: musicxml import: Audiveris ".0" not handled in alter and in backup and forward duration
